# llm-sheet-analysis

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.streamlit/: config.toml
data/: housing.csv
notebooks/: housing-example.ipynb  test.ipynb
src/sheet_analysis/: converse.py
src/sheet_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sheet_analysis/llm/: agent.py  ollama.py  prompts.py
src/sheet_analysis/utils/: coding.py  spreadsheet.py
temp_data/: temp_funcs.py
